--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@fastify/cors": "^8.2.0",
     "@prisma/client": "^4.9.0",
-    "fastify": "^4.11.0"
+    "fastify": "^4.11.0",
+    "ts-node-dev": "^2.0.0"
   },
   "devDependencies": {
     "@mermaid-js/mermaid-cli": "^9.3.0",
@@ -20,5 +21,8 @@
     "prisma-erd-generator": "^1.2.5",
     "tsx": "^3.12.2",
     "typescript": "^4.9.4"
+  },
+  "prisma": {
+    "seed": "ts-node -O {\"module\":\"CommonJS\"} prisma/seed.ts"
   }
 }
